feature(acounts): Rework the balance endpoint in order to introduce the accounts endpoint
