# src/main/kotlin/com/aura/model/Account.kt
@@ -1,0 +1,11 @@
+package com.aura.model
+
+import kotlinx.serialization.SerialName
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class Account(
+    @SerialName("id") val id: String,
+    @SerialName("main") val main: Boolean,
+    @SerialName("balance") var balance: Double
+)
