# src/main/kotlin/com/aura/model/balance/BalanceResult.kt
@@ -1,9 +1,0 @@
-package com.aura.model.balance
-
-import kotlinx.serialization.SerialName
-import kotlinx.serialization.Serializable
-
-@Serializable
-data class BalanceResult(
-    @SerialName("amount") val id: Double?
-)
